# oneshot

./: .env.example  .gitignore  DEMO.md  Makefile  README.md  SETUP.md  azure.yaml  demo.sh  docker-compose.yml
.beads/: issues.jsonl
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  demo_e2e.py  demo_setup.py  pyproject.toml  pytest.ini  requirements.txt  setup_db.py
backend/.claude/: ralph-loop.local.md
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  advisor.py  analyst.py  factory.py  memory.py  middleware.py  orchestrator.py  prompts.py  researcher.py  scribe.py  strategist.py
backend/app/api/: websocket.py
backend/app/api/routes/: analytics.py  chat.py  documents.py  knowledge.py  proposals.py  research.py
backend/app/data/: __init__.py  seed.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: document_service.py  knowledge_service.py  llm_service.py  trace_service.py
backend/data/: brand_guidelines.md  content_calendar.json  demo_test.db-journal  past_posts.json
backend/data/drafts/: instagram_draft.md  linkedin_draft.md  twitter_draft.md
backend/tests/: TEST_REPORT.md  conftest.py  test_agents.py  test_analytics.py  test_api.py  test_chat.py  test_core.py  test_demo_e2e.py  test_documents.py  test_knowledge.py  test_proposals.py  test_research.py  test_seed.py  test_websocket.py
docs/: API.md  CHAT_REDESIGN.md  DEMO_PLAN.md  HACKATHON_PLAN.md  PRD.md  TRD.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
(+70 files in other folders)
