[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "aiosqlite==0.20.0",
    "azure-identity==1.19.0",
    "ddgs>=8.0.0",
    "fastapi==0.115.0",
    "httpx==0.28.0",
    "jinja2==3.1.4",
    "markdown==3.7",
    "numpy>=2.0.0",
    "openai>=1.99.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.6.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "scikit-learn>=1.5.0",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.0",
    "websockets>=15.0.1",
]
